update nginx configuration file to properly reflect ip whitelist range

--- a/nginx.conf
+++ b/nginx.conf
@@ -4,7 +4,7 @@
 
 user nginx;
 worker_processes auto;
-error_log /var/log/nginx/error.log;
+error_log /var/log/nginx/error.log info;
 pid /run/nginx.pid;
 
 # Load dynamic modules. See /usr/share/nginx/README.dynamic.
@@ -59,7 +59,7 @@ http {
 		allow 98.100.124.0/24;
 		allow 98.100.125.0/24;
 		allow 204.77.162.0/24;
-		allow 204.77.163.0/25;
+		allow 204.77.163.0/24;
 		deny all;
 		proxy_set_header	X-Real-IP	$remote_addr;
 		proxy_set_header	X-Forwarded-For	$remote_addr;
